Clean up deleted files and commit changes

--- a/static/templates/profile.html
+++ b/static/templates/profile.html
@@ -272,7 +272,7 @@
 
       if (!currentUser) {
         alert("Please login first.");
-        window.location.href = "login.html";
+        window.location.href = "index.html";
       }
 
       function openUserProfile(username) {
