--- a/static/templates/profile_page.html
+++ b/static/templates/profile_page.html
@@ -109,7 +109,7 @@
   <div>
     <a class="back" href="profile.html">← Back to Chat</a>
   </div>
-  <a class="back" href="login.html">Logout</a>
+  <a class="back" href="index.html">Logout</a>
 </div>
 
 <script>
